[VCS]: Save commit message when undoing commit IJPL-224933
GitOrigin-RevId: d859a7b7c83ad8a4a07dc73113ba48400903347e